crates/tiler-ir/tests/typed-handles/fail/erased_misuse.stderr
error[E0308]: mismatched types
 --> tests/typed-handles/fail/erased_misuse.rs:4:42
  |
4 |     let _ = F32Add::apply(builder, left, right);
  |             -------------                ^^^^^ expected `Value<F32>`, found `ValueId`
  |             |
  |             arguments to this function are incorrect
  |
  = note: expected struct `tiler_ir::semantic::Value<F32>`
             found struct `ValueId`
note: associated function defined here
 --> src/semantic/standard_operations.rs
  |
  |     pub fn apply(
  |            ^^^^^
